--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1,145 +1,11 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
 
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-    display: block;
-}
-
-body {
-    line-height: 1;
-}
-
-ol,
-ul {
-    list-style: none;
-}
-
-blockquote,
-q {
-    quotes: none;
-}
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-    content: '';
-    content: none;
-}
-
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
 h1, h2, h3, p, a, ol{
     
     font-family: 'Roboto', sans-serif;
 }
 
 body {
-    background-color: #18191a;
+    background-color: #0e0e0e;
     height: 9000px;
     margin: 0;
     width: 100vw;
@@ -148,146 +14,142 @@ body {
     flex-direction: column;
 }
 
-nav {
-    background-color: #3f3f41f5;
-    width: 100vw;
-    position: fixed;
-    justify-content: center;
-    align-items: center;
+
+header {
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row;
+  align-items: center;
 }
 
-nav ul {
 
-    display: flex;
-    width: 100vw;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    height: 50px;
 
-}
-
-nav li a {
-
-    color: white;
-    font-size: 11pt;
-    padding: 12px;
-    list-style: none;
-    margin-right: 20px;
+.menuToggle {
+  display: block;
+  position: fixed;
+  top: 40px;
+  z-index: 1;
+  -webkit-user-select: none;
+  user-select: none;
+  a {
     text-decoration: none;
-    font-family: 'Roboto', sans-serif;
-    transition-duration: 2ms;
-   
+    color: #d5d5d5;
+    font-size: 15pt;
+    transition: all 0.3s ease;
+    &:hover {
+      color: aqua;
+    }
+  }
+  input {
+    display: block;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    top: -7px;
+    cursor: pointer;
+    opacity: 0; /* hide this */
+    z-index: 2; /* and place it over the hamburger */
+    -webkit-touch-callout: none;
+  }
+  span {
+    position: relative;
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+    background: #cdcdcd;
+    border-radius: 3px;
+    z-index: 1;
+    transform-origin: 4px 0px;
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                /* background 0.5s cubic-bezier(0.77,0.2,0.05,1.0), */
+                opacity 0.55s ease;
+    &:first-child {
+      transform-origin: 0% 0%;
+    }
+    &:nth-last-child(2) {
+      transform-origin: 0% 100%;
+    }
+  }
 }
 
-nav li a:hover {
-    color: aqua;
+.menuToggle {
+  input {
+    &:checked ~ span {
+      opacity: 1;
+      transform: rotate(45deg) translate(-2px, -1px);
+      background: aqua;
+      &:nth-last-child(3) {
+        opacity: 0;
+        transform: rotate(0deg) scale(0.2, 0.2);
+      }
+      &:nth-last-child(2) {
+        transform: rotate(-45deg) translate(0, -1px);
+      }
+    }
+    &:checked ~ .menuItem {
+      transform: none;
+    }
+    
+  }
 }
 
-
-nav {
-
-    height: 50px;
-    background-attachment: fixed;
-    background: rgb(59, 59, 59);
-    position: fixed;
-    align-items: center;
-    display: flex;
-    top: 0px;
-    width: 100vw;
-    z-index: 3;
-
-
+.menuItem {
+  position: absolute;
+  width: 340px;
+  height: 100vw;
+  padding: 50px;
+  padding-top: 125px;
+  background: #0a0a0a48;
+  backdrop-filter: blur(5px);
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  transform-origin: 0% 0%;
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+  li {
+    padding: 10px 0;
+    font-size: 22px;
+  }
 }
 
-ol {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin: 0 auto;
-
+.menu--left {
+  position: relative;
+  width: 50%;
+  .menuToggle {
+    left: 0;
+    input {
+      left: 50px;
+    }
+    span {
+      left: 50px;
+    }
+  }
+  .menuItem {
+    left: 50px;
+    margin: -100px 0 0 -50px;
+    transform: translate(-100%, 0);
+  }
 }
 
-ol li a {
-    color: white;
-    font-family: 'Roboto', sans-serif;
-    font-size: 12pt;
-    font-weight: 200;
-    letter-spacing: 2px;
-    text-align: center;
-    text-decoration: none;
-    padding: 30px;
-
-}
-
-.bx {
-    width: 50px;
-    margin-left: 30px;
-    color: rgb(0, 255, 255);
-    font-size: 50px;
-
-}
-
-nav .bx {
-    display: none;
-}
 
 #Accueil {
     display: flex;
     flex-direction: column;
     margin: 0 auto;
-    justify-content: center;
-    align-items: center;
-    height: 1000px;
-    width: 60%;
-    background-image: url(img_acc.png);
-    background-repeat: no-repeat;
-    z-index: 1;
-    background-position: center;
-    background-attachment: scroll;
-    background-size: auto;
-    width: 70%;
-    transform-style: preserve-3d; /* Indique que les transformations doivent être appliquées en 3D */
-    animation: rotateImage 10s infinite linear; /* Animation pour la rotation continue */
+    justify-content: flex-start;
+    align-items:first baseline;
+    height: 700px;
+    width: 100%;
+  
 
 }
-@keyframes rotateImage {
-    0% {
-        transform: rotateY(0deg); /* Rotation initiale */
-    }
-    100% {
-        transform: rotateY(360deg); /* Rotation complète */
-    }
-}
-
-#Accueil h2 {
-    color: white;
-    font-size: 35pt;
-    text-align: center;
-    background: linear-gradient(90deg, rgb(70, 62, 212) 0%, rgba(153, 18, 219, 1) 35%, rgba(0, 212, 255, 1) 100%);
-    -webkit-background-clip: text;
-
-    z-index: 2;
-    /* Pour WebKit (Safari/Chrome) */
-    color: transparent;
-    /* Rend le texte transparent */
+#Accueil iframe{
+    width: 100%;
 
 }
 
-#Accueil p {
 
-    font-size: 16pt;
-
-    text-align: center;
-    background: linear-gradient(90deg, rgb(226, 225, 243) 0%, rgb(177, 148, 192) 35%, rgb(0, 213, 255) 100%);
-    -webkit-background-clip: text;
-    font-weight: bold;
-    /* Pour WebKit (Safari/Chrome) */
-    color: transparent;
-    /* Rend le texte transparent */
-
-
-}
 .titre {
     display: block;
     justify-content: center;
@@ -297,60 +159,37 @@ nav .bx {
 
 
 }
-.animate__animated.animate__bounce {
-    --animate-duration: 2s;
-  }
-  
-  /* This changes all the animations globally */
-  :root {
-    --animate-duration: 800ms;
-    --animate-delay: 0.9s;
-  }
 
-
-#Accueil img{
-width: 300px;
-
-}
 
 
 #Apropos {
+ 
+    width: 70%;
+    border: 2px solid #c1c2c4;
+    border-radius: 25px;
     display: flex;
-    flex-direction: row;
     margin: 0 auto;
-    justify-content: center;
-    align-items: center;
-    height: 900px;
-    width: 58%;
-    padding: 20px;
-    border: 2px solid #232425;
-    border-radius: 10px;
+    
 }
-#Apropos h2{
-    color: white;
-    font-size: 25pt;
-    margin-bottom: 70px;
-}
-#Apropos p{
-    color: white;
-    font-size: 14pt;
-    text-align: justify;
-    display: block;
-    width: 55%;
-    line-height: 2rem;
-}
-.details{
-    display: flex;
-    flex-direction: column;
 
-}
 #Apropos img{
     width: 300px;
     display: flex;
+    margin: 0 auto;
     border-radius: 20px;
     box-shadow: 6px 5px 5px rgb(0, 247, 255);
     margin-right: 30px;
-}
+    transition: transform 0.3s ease-in-out;
+    
+} 
+
+#Apropos img:hover{
+    box-shadow: 6px 5px 5px rgb(209, 213, 213);
+    transform: scale(1.1);
+} 
+
+
+
 
 /* section{
     border: solid 2px rebeccapurple;
@@ -389,7 +228,7 @@ p{
     margin-top: 100px;
     width: 100%;
     top: 100px;
-    height: 1000px;
+    height: 2000px;
     border-radius: 25px;
     transition-duration: 5ms;
     pointer-events: none;
@@ -402,9 +241,10 @@ p{
     justify-content: left;
     display: flex;
     flex-direction: row;
-    width: 50px;
+    width: 100px;
     color: white;
     margin: 10px;
+    font-size: 50px;
 }
 .cards img{
     justify-content: left;
@@ -439,14 +279,17 @@ p{
     color: rgb(68, 68, 68);
     height: 20px;
     border-radius: 20px;
+    background-color: #00eaff; 
+    font-family: 'Roboto', sans-serif; 
+    font-weight: bold;
 }
-
+/* 
 .html {width: 90%; background-color: #00eaff; font-family: 'Roboto', sans-serif; font-weight: bold;}
 .css {width: 80%; background-color: #00eaff; font-family: 'Roboto', sans-serif; font-weight: bold;}
 .js {width: 35%; background-color: #00eaff; font-family: 'Roboto', sans-serif; font-weight: bold;}
 .php {width: 10%; background-color: #00eaff; font-family: 'Roboto', sans-serif; font-weight: bold;}
 .babylon {width: 30%; background-color: #00eaff; font-family: 'Roboto', sans-serif; font-weight: bold;}
-.frameworks {width: 30%; background-color: #00eaff; font-family: 'Roboto', sans-serif; font-weight: bold;}
+.frameworks {width: 30%; background-color: #00eaff; font-family: 'Roboto', sans-serif; font-weight: bold;} */
 
 .container button {
     width: 70%;
@@ -546,7 +389,7 @@ p{
 }
 
 #Formation{
-   height: 900px;
+   height: 1000px;
     
 }
 
@@ -576,6 +419,8 @@ p{
     background-color: rgb(6, 124, 243);
  
  }
+
+
 p{
     font-size: 15pt;
 }
@@ -655,21 +500,118 @@ p{
   
 
 
+#projet{
+    height:1200px;
+    border: 1px solid #e7e7e7;
+    width: 90%;
+    padding: 20px;
+    display: block;
+    flex-direction: column;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    border-radius: 25px;
+    flex-direction: row;
+}
+#projet iframe, svg{
+ height: 900px;
+ flex-direction: column;
+border-radius: 25px;
+width: 100%;
+}
 
+#projet i{ 
+    color: rgb(215, 219, 219);
+    padding: 10px;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+}
+#projet .bx{
+    font-size: 26px;
+    font-family: 'Roboto', sans-serif;
+}
 
+#projet p{
+    color: white;
+    display: block;
+    width: 60%;
+    line-height: 2em;
+    padding:10px;
+    font-size: 14pt;
+    font-weight: 600;
+
+}
   
 
+.relative .bx{
+    font-size: 40px;
+    margin-top: 20px;
+}
+/* bouton  */
 
+
+/* *politque rgpd  */
+
+/* Style pour la fenêtre modale */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 10% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+form a {
+   color: white;
+}
 @media screen and (min-width: 340px) and (max-width: 1400px) {
     /* Styles pour la plage de 551px à 750px */
     body{
-    background-color: #18191a;
-    height: 10000px;
+    height: 15000px;
     margin: 0;
     width: 100%;
     display: flex;
     margin: 0 auto;
     flex-direction: column;
+}
+#Accueil {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  justify-content: flex-start;
+  align-items:first baseline;
+  height: 1000px;
+  width: 100%;
+  /* border-radius: 25px;
+  border: 1px solid #e7e7e7;
+*/
+
 }
 #Competences {
     display:flex;
@@ -683,9 +625,59 @@ p{
     
 
 }
+#Apropos {
+ 
+    width: 90%;
+    border: 2px solid #c1c2c4;
+    border-radius: 25px;
+    display: flex;
+    margin: 0 auto;
+    
+}
+#Apropos img{
+  width: 200px;
+  display: block;
+  margin: 0 auto;
+  border-radius: 20px;
+  box-shadow: 6px 5px 5px rgb(0, 247, 255);
+  margin-right: 30px;
+  transition: transform 0.3s ease-in-out;
+  
+} 
 #Formation{
-    height: 1200px;
+    height: 1900px;
      
  }
 
+ #projet{
+    height: 1400px;
+    border: 1px solid #e7e7e7;
+    width: 95%;
+    padding: 20px;
+    display: block;
+    flex-direction: column;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    border-radius: 25px;
+    flex-direction: row;
 }
+ #projet p{
+   display: none;
+
+}
+#projet iframe, svg{
+    height: 1000px;
+    flex-direction: column;
+   border-radius: 25px;
+   width: 100%;
+   }
+   .menu--left .menuItem {
+    height: 100vh;
+  }
+
+}
+
+.mt-4 a{
+  display: block;
+ }
